# g_app

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.txt  build.sh  imgui.ini
build-release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-release/.cmake/api/v1/reply/: cache-v2-923295dbc3a4b103b563.json  cmakeFiles-v1-db66948a0714bb97d26c.json  codemodel-v2-a478b798399ee9f2306a.json  directory-external.glfw-Release-47f31ff4a16aaa27f3df.json  index-2023-11-06T22-58-22-0176.json  target-1_triangle-Release-7709ec8c16433162f56f.json  target-g_app-Release-611cba0bfd32fe2ea276.json  target-glfw-Release-59eda7a624e35785983f.json  target-spdlog-Release-ac43b968d8e92fc5bf75.json  target-uninstall-Release-601fb71e45e25c84887b.json  target-update_mappings-Release-5c1b1ecadc0ad4e36a30.json
examples/: CMakeLists.txt
examples/compute_cellular_automata/: cell.comp  cell.vert  compute_cellular_automata.cpp
examples/cube/: cube.cpp  shader.frag  shader.vert
examples/drawing_to_image/: drawing_to_image.cpp  screen.frag  screen.vert
examples/push_descriptors/: push_descriptors.cpp
examples/render_texture/: draw.frag  draw.vert  render_texture.cpp  shader.frag  shader.vert
examples/textures/: shader.frag  shader.vert  textures.cpp
examples/triangle/: 1_triangle.cpp  shader.frag  shader.vert  triangle.cpp
include/: audio.hpp  g_app.hpp  types.hpp  window.hpp
include/vkgfx/: all.hpp  buffer.hpp  command_buffer.hpp  descriptor.hpp  framebuffer.hpp  image.hpp  pipeline.hpp  pipeline_cache.hpp  render_pass.hpp  renderer.hpp  sync.hpp  texture.hpp  types.hpp
src/: audio.cpp  g_app.cpp  vma.cpp  window.cpp
src/vkgfx/: descriptor.cpp  framebuffer.cpp  image.cpp  pipeline.cpp  pipeline_cache.cpp  render_pass.cpp  renderer.cpp
